Worked on some JS assignments

--- a/index.html
+++ b/index.html
@@ -2,54 +2,30 @@
 
 <html lang="en">
 
-
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
     <!-- SEO -->
-
     <meta name="description" content="">
-
     <meta name="keywords" content="">
 
-
-
     <!-- Font Awesome 4 -->
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
 
     <link rel="stylesheet" href="./css/styles.css">
 
-
-
     <title>Tobsi - Portfolio</title>
-
 </head>
-
-
 
 <!-- Body -->
 
-
-
 <body>
 
-
-
     <!-- Header -->
-
     <header>
 
         <!-- NAV -->
-
         <nav class="flex-container justify-space">
 
 
@@ -60,69 +36,38 @@
 
             </a>
 
-
-
             <ul class="flex-container justify-space ">
-
                 <li><a href="./index.html" target="_self" rel="noopener noreferrer">Home</a></li>
-
                 <li><a href="./pages/about.html" target="_self" rel="noopener noreferrer">About Me</a></li>
-
             </ul>
-
-
-
         </nav>
-
     </header>
 
-
-
     <!-- Main -->
-
     <main>
-
         <h1>Welcome to THE page of all time</h1>
 
-
-
         <!-- Article -->
-
         <article class="flex-container center-content">
 
-
             <!-- First Site -->
-
             <section class="card-container">
-
                 <img src="./image/pfp/EZ.png" alt="Preview image of SITE-NAME">
-
                 <h3 class="center-80">SITE-NAME-GOES-HERE</h3>
-
                 <p class="center-80">
-
                     About Lorem ipsum dolor sit amet consectetur adipisicing elit. In expedita assumenda, sunt ad
-
                     tenetur
-
                     molestias doloremque itaque, accusamus saepe voluptates repellendus iusto voluptatem voluptatibus
 
                     dolorem maxime illo quasi excepturi? Voluptatum, facere! Eaque tempore quasi accusamus explicabo,
 
                     consectetur totam pariatur reprehenderit ratione eligendi.
-
                 </p>
 
-
-
                 <!-- Link to LivePage -->
-
                 <a href="">
-
                     <div class="button">
-
                         <h4><i class="fa fa-wpforms" aria-hidden="true"></i>Live</h4>
-
                     </div>
 
                 </a>
@@ -163,6 +108,6 @@
 
 </body>
 
-
-
 </html>
+
+<script src="./js/create-cards.js"></script>
