--- a/projects/V2/Old Exam/index.html
+++ b/projects/V2/Old Exam/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="fastfood, økologisk, sund mad, sund fastfood, takeaway">
+    <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
+    <!-- JS -->
+    <script src="./js/BurgerMenu.js" defer></script>
     <title></title>
 </head>
 
@@ -13,7 +16,7 @@
     <header>
         <a href="index.html"><img src="img/Logo.png"></a>
 
-        <img src="img/bars-solid-white.png">
+        <img src="img/bars-solid-white.png" class="is-active">
         <img src="img/times-solid-white.png">
         <nav>
             <a href="index.html">Forside</a>
