--- a/projects/V2/Old Exam/index.html
+++ b/projects/V2/Old Exam/index.html
@@ -16,8 +16,10 @@
     <header>
         <a href="index.html"><img src="img/Logo.png"></a>
 
-        <img src="img/bars-solid-white.png" class="is-active">
-        <img src="img/times-solid-white.png">
+        <div>
+            <img src="img/bars-solid-white.png" class="is-active">
+            <img src="img/times-solid-white.png">
+        </div>
         <nav>
             <a href="index.html">Forside</a>
             <a href="frugt.html">Frisk frugt</a>
