--- a/projects/V2/Old Exam/juice.html
+++ b/projects/V2/Old Exam/juice.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="opskrifter, sund mad, økologisk, sund fastfood">
+    <meta name="keywords" content="opskrifter, sund mad, økologisk, sund fastfood"><!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/styles-juice.css">
+    <!-- JS -->
+    <script src="./js/BurgerMenu.js" defer></script>
     <title></title>
 </head>
 
@@ -14,8 +16,10 @@
     <header>
         <a href="index.html"><img src="img/Logo.png"></a>
 
-        <img src="img/bars-solid-white.png">
-        <img src="img/times-solid-white.png">
+        <div>
+            <img src="img/bars-solid-white.png" class="is-active">
+            <img src="img/times-solid-white.png">
+        </div>
         <nav>
             <a href="index.html">Forside</a>
             <a href="frugt.html">Frisk frugt</a>
