Worked on the old exam. The mobile page for Index, Frugt and Juice should be done. Also added the SEO theory and assignments.

--- a/projects/V2/Old Exam/frugt.html
+++ b/projects/V2/Old Exam/frugt.html
@@ -42,7 +42,7 @@
 
             <h2>I denne uge har vi følgende saftige frugter til salg:</h2>
 
-            <article>
+            <article class="fruit-img-container">
                 <img src="img/FriskFrugtAeble.jpg">
                 <img src="img/FriskFrugtAnanas.jpg">
                 <img src="img/FriskFrugtAvocado.jpg">
@@ -51,7 +51,7 @@
                 <img src="img/FriskFrugtMelon.jpg">
             </article>
         </section>
-        <section>
+        <section class="slideshow-container">
             <h3>Har du prøvet en af vores friskpressede juicer til kun 35kr?</h3>
             <article>
                 <a href="juice.html">
@@ -72,16 +72,26 @@
         <p>Hasselblad Allé 4</p>
         <p>8000 Aarhus C.</p>
 
-        <img src="img/Cell-phone-icon.png">
-        <p>12 34 56 78</p>
-        <img src="img/Email-icon.png">
-        <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
-        <img src="img/instagram-icon.png">
-        <a href="#">Følg os på Instagram</a>
+        <div>
+            <img src="img/Cell-phone-icon.png">
+            <p>12 34 56 78</p>
+        </div>
+        <div>
+            <img src="img/Email-icon.png">
+            <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
+        </div>
+        <div>
+            <img src="img/instagram-icon.png">
+            <a href="#">Følg os på Instagram</a>
+        </div>
 
-        <img src="img/shop-icon.png">
-        <p>Man - fre: 10 - 18</p>
-        <p>Lør: 10 - 14</p>
+        <div>
+            <img src="img/shop-icon.png">
+            <div class=".flex-dir-column">
+                <p>Man - fre: 10 - 18</p>
+                <p>Lør: 10 - 14</p>
+            </div>
+        </div>
     </footer>
 
 </body>
