--- a/projects/V2/Old Exam/index.html
+++ b/projects/V2/Old Exam/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="remove-fir-article">
         <section>
             <h1>Frugt & Fastfood</h1>
             <article>
@@ -112,7 +112,7 @@
                 <h4>60,-</h4>
             </article>
         </section>
-        <section>
+        <section class="slideshow-container">
             <h3>Har du prøvet en af vores friskpressede juicer til kun 35kr?</h3>
             <article>
                 <a href="juice.html">
@@ -128,21 +128,32 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>Frugt & Fastfood</p>
         <p>Hasselblad Allé 4</p>
         <p>8000 Aarhus C.</p>
 
-        <img src="img/Cell-phone-icon.png">
-        <p>12 34 56 78</p>
-        <img src="img/Email-icon.png">
-        <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
-        <img src="img/instagram-icon.png">
-        <a href="#">Følg os på Instagram</a>
+        <div>
+            <img src="img/Cell-phone-icon.png">
+            <p>12 34 56 78</p>
+        </div>
+        <div>
+            <img src="img/Email-icon.png">
+            <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
+        </div>
+        <div>
+            <img src="img/instagram-icon.png">
+            <a href="#">Følg os på Instagram</a>
+        </div>
 
-        <img src="img/shop-icon.png">
-        <p>Man - fre: 10 - 18</p>
-        <p>Lør: 10 - 14</p>
+        <div>
+            <img src="img/shop-icon.png">
+            <div class=".flex-dir-column">
+                <p>Man - fre: 10 - 18</p>
+                <p>Lør: 10 - 14</p>
+            </div>
+        </div>
     </footer>
 </body>
 
