--- a/projects/V2/Old Exam/juice.html
+++ b/projects/V2/Old Exam/juice.html
@@ -29,24 +29,32 @@
     </header>
 
     <main>
-        <section>
+        <section class="juice-img-container">
             <h1>Har du prøvet en af vores friskpressede juicer til kun 35kr?</h1>
 
-            <article>
+            <article class="juice-container">
                 <p>Vores juice er friskpresset af økologiske råvarer og serveres i et to-go krus af økologiske og
                     nedbrydelige materialer.</p>
+                <div>
 
-                <img src="img/JuiceGulerodFerskenIngefaer.jpg">
-                <p>Friskpresset gulerods- og ferskenjuice med ingefær</p>
+                    <img src="img/JuiceGulerodFerskenIngefaer.jpg">
+                    <p>Friskpresset gulerods- og ferskenjuice med ingefær</p>
+                </div>
+                <div>
 
-                <img src="img/JuiceJordbaerMint.jpg">
-                <p>Friskpresset jordbærjuice med mynte og lime</p>
+                    <img src="img/JuiceJordbaerMint.jpg">
+                    <p>Friskpresset jordbærjuice med mynte og lime</p>
+                </div>
+                <div>
 
-                <img src="img/JuiceSpinatLime.jpg">
-                <p>Friskpresset spinatjuice med basilikum og lime</p>
+                    <img src="img/JuiceSpinatLime.jpg">
+                    <p>Friskpresset spinatjuice med basilikum og lime</p>
+                </div>
+                <div>
 
-                <img src="img/JuiceMangoCitrus.jpg">
-                <p>Friskpresset mangojuice med citrusfrugter</p>
+                    <img src="img/JuiceMangoCitrus.jpg">
+                    <p>Friskpresset mangojuice med citrusfrugter</p>
+                </div>
             </article>
         </section>
     </main>
@@ -56,16 +64,26 @@
         <p>Hasselblad Allé 4</p>
         <p>8000 Aarhus C.</p>
 
-        <img src="img/Cell-phone-icon.png">
-        <p>12 34 56 78</p>
-        <img src="img/Email-icon.png">
-        <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
-        <img src="img/instagram-icon.png">
-        <a href="#">Følg os på Instagram</a>
+        <div>
+            <img src="img/Cell-phone-icon.png">
+            <p>12 34 56 78</p>
+        </div>
+        <div>
+            <img src="img/Email-icon.png">
+            <a href="mailto:info@frugtogfastfood.dk">info@frugtogfastfood.dk</a>
+        </div>
+        <div>
+            <img src="img/instagram-icon.png">
+            <a href="#">Følg os på Instagram</a>
+        </div>
 
-        <img src="img/shop-icon.png">
-        <p>Man - fre: 10 - 18</p>
-        <p>Lør: 10 - 14</p>
+        <div>
+            <img src="img/shop-icon.png">
+            <div class=".flex-dir-column">
+                <p>Man - fre: 10 - 18</p>
+                <p>Lør: 10 - 14</p>
+            </div>
+        </div>
     </footer>
 </body>
 
